--- a/templates/attendance/DB5_base.html
+++ b/templates/attendance/DB5_base.html
@@ -9,6 +9,7 @@
     <!-- MDB -->
     
     <link href="{% static 'attendance/MDB5s/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
 
     <style>
     {% block style %}
