--- a/templates/attendance/checksheet.html
+++ b/templates/attendance/checksheet.html
@@ -150,6 +150,7 @@ checksheet
                                             <li><a class="dropdown-item">B</a></li>
                                             <li><a class="dropdown-item">J</a></li>
                                             <li><a class="dropdown-item">BJ</a></li>
+                                            <li><a class="dropdown-item">M</a></li>
                                             <li><a class="dropdown-item">DM</a></li>
                                             <input type="hidden" class="form-control" name="staff_attr" value="{{selectedStaff.attr}}">
                                         </ul>
